--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,134 @@
-altgraph==0.17.4
-asgiref==3.8.1
-auto-py-to-exe==2.42.0
-bottle==0.12.25
-bottle-websocket==0.2.9
-certifi==2025.4.26
+anyio==4.9.0
+argcomplete==3.6.2
+attrs==25.1.0
+awscli==2.25.0
+awscrt==0.24.2
+beautifulsoup4==4.13.4
+blinker==1.9.0
+blivet==3.12.1
+blivet-gui==2.6.0
+boto3==1.38.46
+botocore==1.38.46
+Brlapi==0.8.6
+Brotli==1.1.0
+certifi==2024.8.30
 cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.2
-cryptography==44.0.3
-defusedxml==0.7.1
+charset-normalizer==3.4.1
+click==8.1.7
+colorama==0.4.6
+crypt_r==3.13.1
+cryptography==44.0.0
+cupshelpers==1.0
+dasbus==1.7
+dbus-python==1.3.2
+dbus_next==0.2.3
 distlib==0.3.9
+distro==1.9.0
+dj-database-url==3.0.0
 Django==5.2.1
-django-admin-black==1.0.20
-django-ckeditor==6.7.2
-django-js-asset==3.1.2
-Eel==0.16.0
+dnf==4.23.0
+docutils==0.21.2
+fedora-third-party==0.10
+file-magic==0.4.0
 filelock==3.18.0
-future==0.18.3
-gevent==23.9.1
-gevent-websocket==0.10.1
+Flask==3.1.1
 git-filter-repo==2.47.0
-greenlet==3.0.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+humanize==4.12.0
 idna==3.10
-oauthlib==3.2.2
-packaging==23.2
-pefile==2023.2.7
-pillow==11.2.1
+initial-setup==0.3.101
+iso639==0.1.4
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+langtable==0.0.68
+libcomps==0.1.21
+libdnf==0.74.0
+louis==3.33.0
+lxml==5.3.2
+MarkupSafe==3.0.2
+mutagen==1.47.0
+mysql-connector-python==9.3.0
+mysqlclient==2.2.7
+nest-asyncio==1.6.0
+nftables==0.1
+numpy==2.3.1
+olefile==0.47
+packaging==24.2
+perf==0.1
+pexpect==4.9.0
+pid==2.2.3
+pillow==11.1.0
 platformdirs==4.3.8
-pycparser==2.22
-pyinstaller==6.3.0
-pyinstaller-hooks-contrib==2023.12
-PyJWT==2.10.1
-pyparsing==3.1.1
-PyPDF2==3.0.1
-python-decouple==3.8
-python3-openid==3.2.0
-pywin32-ctypes==0.2.2
-reportlab==4.4.1
+ply==3.11
+productmd==1.45
+prompt_toolkit==3.0.41
+psutil==6.1.1
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pwquality==1.4.5
+pycairo==1.25.1
+pycparser==2.20
+pycryptodomex==3.21.0
+pycups==2.0.4
+pyenchant==3.2.2
+pygdbmi==0.11.0.0
+Pygments==2.18.0
+PyGObject==3.50.0
+pyinotify==0.9.6
+pykickstart==3.62
+pyparted==3.13.0
+PySocks==1.7.1
+python-augeas==1.1.0
+python-dateutil==2.8.2
+python-linux-procfs==0.7.3
+python-meh==0.52
+python-telegram-bot==22.2
+python-xlib==0.33
+pytz==2025.2
+pyudev==0.24.3
+pyxdg==0.27
+PyYAML==6.0.2
+pyynl @ file:///builddir/build/BUILD/kernel-6.15.4-build/kernel-6.15.4/linux-6.15.4-200.fc42.x86_64/tools/net/ynl
+RapidFuzz==3.11.0
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
-requests-oauthlib==2.0.0
-setuptools==69.0.3
-social-auth-app-django==5.4.3
-social-auth-core==4.6.1
+requests-file==2.0.0
+requests-ftp==0.3.1
+rpds-py==0.25.0
+rpm==4.20.1
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+s3transfer==0.13.0
+selinux @ file:///builddir/build/BUILD/libselinux-3.8-build/libselinux-3.8/src
+sentry-sdk==2.21.0
+sepolicy @ file:///builddir/build/BUILD/policycoreutils-3.8-build/selinux-3.8/python/sepolicy
+setools==4.5.1
+setroubleshoot @ file:///builddir/build/BUILD/setroubleshoot-3.3.35-build/setroubleshoot-3.3.35/src
+setuptools==74.1.3
+shapely==2.1.1
+simpleaudio==1.0.4
+simpleline==1.9.0
+six==1.17.0
+sniffio==1.3.1
+sos==4.9.1
+soupsieve==2.7
 sqlparse==0.5.3
-tzdata==2025.2
-urllib3==2.4.0
+systemd-python==235
+telegram==0.0.1
+typing_extensions==4.12.2
+urllib3==2.3.0
 virtualenv==20.31.2
-whichcraft==0.6.1
-zope.event==5.0
-zope.interface==6.1
+wcwidth==0.2.13
+websockets==14.1
+Werkzeug==3.1.3
+xkbregistry==0.3
+yt-dlp==2025.6.25
+asgiref==3.8.1
+mysqlclient==2.2.7
+PyMySQL==1.1.1
